syntax = "proto3";

package zksync.network.mux.tests;

message Req {
  optional bytes input = 1;
}

message Resp {
  optional bytes output = 1;
  optional uint64 capability_id = 2;
}
